# vendor_hpmicro

./: OAT.xml  README.en.md  README.md
application/: BUILD.gn
application/gpio/: BUILD.gn  app_gpio_in.c  app_gpio_irq.c  app_gpio_out.c
application/i2c/: BUILD.gn  app_i2c.c
application/lwip/: BUILD.gn
application/spi/: BUILD.gn  app_spi.c
application/watchdog/: BUILD.gn  app_watchdog.c
hpm5300evk/: BUILD.gn  config.json  ohos.build
hpm5300evk/hdf_config/: BUILD.gn  hdf.hcs
hpm5300evk/hdf_config/config/platform/: gpio.hcs  i2c.hcs  spi.hcs  watchdog.hcs
hpm5300evk/hdf_config/device_info/: device_info.hcs
hpm5300evk/kernel_configs/: debug.config
hpm6280evk/: BUILD.gn  config.json  ohos.build
hpm6280evk/hdf_config/: BUILD.gn  hdf.hcs
hpm6280evk/hdf_config/config/platform/: gpio.hcs  spi.hcs  watchdog.hcs
hpm6280evk/hdf_config/device_info/: device_info.hcs
hpm6280evk/kernel_configs/: debug.config
hpm6300evk/: config.json  ohos.build
hpm6300evk/hdf_config/: BUILD.gn  hdf.hcs
hpm6300evk/hdf_config/config/platform/: gpio.hcs  spi.hcs  uart.hcs
hpm6300evk/hdf_config/device_info/: device_info.hcs
hpm6300evk/kernel_configs/: debug.config
hpm6750evk2/: config.json  ohos.build
hpm6750evk2/application/: BUILD.gn
hpm6750evk2/application/gpio/: app_gpio_in.c  app_gpio_irq.c  app_gpio_out.c
hpm6750evk2/application/lwip/: BUILD.gn  iperf.c
hpm6750evk2/hals/utils/sys_param/: hal_sys_param.c  vendor.para
hpm6750evk2/hdf_config/: BUILD.gn
hpm6750evk2/hdf_config/config/platform/: gpio.hcs  i2c.hcs  spi.hcs  watchdog.hcs
hpm6750evk2/hdf_config/device_info/: device_info.hcs
hpm6750evk2/kernel_configs/: debug.config
hpm6750evk_demo/: BUILD.gn  config.json
hpm6750evk_demo/hals/utils/sys_param/: hal_sys_param.c  vendor.para
hpm6750evk_demo/hdf_config/: hdf.hcs
hpm6750evk_demo/hdf_config/config/platform/: spi.hcs  watchdog.hcs
hpm6750evk_demo/hdf_config/device_info/: device_info.hcs
hpm6750evk_demo/kernel_configs/: debug.config
hpm6750evk_xts/: config.json
hpm6750evk_xts/hals/utils/sys_param/: hal_sys_param.c  vendor.para
hpm6750evk_xts/hals/utils/token/: BUILD.gn
hpm6750evk_xts/kernel_configs/: debug.config
hpm6800evk/: config.json  ohos.build
hpm6800evk/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c  vendor.para
hpm6800evk/hdf_config/: hdf.hcs
hpm6800evk/hdf_config/config/platform/: gpio.hcs  i2c.hcs  spi.hcs  uart.hcs  watchdog.hcs
hpm6800evk/hdf_config/device_info/: device_info.hcs
hpm6800evk/kernel_configs/: debug.config
