# Copyright (c) 2024 HPMicro.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")

module_name = get_path_info(rebase_path("."), "name")
module_switch = defined(LOSCFG_DRIVERS_HDF_PLATFORM_SPI)

kernel_module(module_name) {
  include_dirs = [ 
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite"
  ]

  cflags = [ "-Wall", "-Werror"]
  
  sources = [ 
    "app_spi.c",
  ]

  configs += [ "$HDFTOPDIR:public",
              "$HDFTOPDIR:hdf_config" ]
}
