#
# Copyright (c) 2022 HPMicro.
#
# This file is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.
#

import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")

module_switch = defined(LOSCFG_DRIVERS_HDF)
module_name = get_path_info(rebase_path("."), "name")

hdf_driver(module_name) {
    special_visibility = [ 
      "../..",
      "//device/board/hpmicro"
    ]
    hcs_sources = [ "hdf.hcs" ]
}

