# Copyright (c) 2022 HPMicro.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")

module_name = get_path_info(rebase_path("."), "name")
module_switch = defined(LOSCFG_NET_LWIP_SACK)

hdf_driver(module_name) {
  include_dirs = [ 
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite"
  ]

  cflags = [ "-Wall"]

  sources = [ 
    "iperf.c",
  ]
  
}
